Added initial solution to open buy order modals on all SCM pages with one click
- Some code refactoring
- Added some JSDocs and comments
- Added pageUrl to buy order model cause it was missing although filled from contentPage

--- a/angular/src/app/modules/popup/pages/popup/popup.component.html
+++ b/angular/src/app/modules/popup/pages/popup/popup.component.html
@@ -142,6 +142,13 @@
         class="w-full block mx-auto shadow transition duration-300 ease-in-out bg-green-500 hover:bg-green-600 focus:shadow-outline focus:outline-none text-white font-bold text-xl py-2 px-4 rounded mb-4">
         PLACE BUY ORDER
       </button>
+
+      <button
+        (click)="openPlaceBuyOrderWindowOnAllTabs()"
+        type="button"
+        class="w-full block mx-auto shadow transition duration-300 ease-in-out bg-red-500 hover:bg-red-600 focus:shadow-outline focus:outline-none text-white font-bold text-xl py-2 px-4 rounded mb-4">
+        PLACE BUY ORDER ALL
+      </button>
     </div>
 
     <div
