Improved display of "Open BO on all pages" button with info text
- Fixed minor visual issue with currency dropdown background color
- Added info text for quick BO opening on all pages and button display in a better manner

--- a/angular/src/app/modules/popup/pages/popup/popup.component.html
+++ b/angular/src/app/modules/popup/pages/popup/popup.component.html
@@ -96,7 +96,6 @@
             class="block text-gray-500 font-medium text-sm mb-2"
             >Currency</label
           >
-
           <div class="flex justify-center">
             <div class="w-full">
               <select
@@ -106,7 +105,7 @@
                     boForm.get('currencyId').invalid
                 }"
                 formControlName="currencyId"
-                class="form-select appearance-none bg-gray-200border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+                class="form-select appearance-none bg-gray-200 border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
                 aria-label="Currency select">
                 <option
                   *ngFor="let currency of currencies"
@@ -141,13 +140,6 @@
         type="button"
         class="w-full block mx-auto shadow transition duration-300 ease-in-out bg-green-500 hover:bg-green-600 focus:shadow-outline focus:outline-none text-white font-bold text-xl py-2 px-4 rounded mb-4">
         PLACE BUY ORDER
-      </button>
-
-      <button
-        (click)="openPlaceBuyOrderWindowOnAllTabs()"
-        type="button"
-        class="w-full block mx-auto shadow transition duration-300 ease-in-out bg-red-500 hover:bg-red-600 focus:shadow-outline focus:outline-none text-white font-bold text-xl py-2 px-4 rounded mb-4">
-        PLACE BUY ORDER ALL
       </button>
     </div>
 
@@ -192,7 +184,9 @@
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 20 20">
             <path
-              d="M2.93 17.07A10 10 0 1 1 17.07 2.93 10 10 0 0 1 2.93 17.07zm12.73-1.41A8 8 0 1 0 4.34 4.34a8 8 0 0 0 11.32 11.32zM9 11V9h2v6H9v-4zm0-6h2v2H9V5z" />
+              d="M2.93 17.07A10 10 0 1 1 17.07 2.93 10 10 0 0 1 2.93
+              17.07zm12.73-1.41A8 8 0 1 0 4.34 4.34a8 8 0 0 0 11.32 11.32zM9
+              11V9h2v6H9v-4zm0-6h2v2H9V5z" />
           </svg>
         </div>
         <div class="flex items-center">
@@ -234,6 +228,26 @@
     Last update: {{ itemInfo.updated | date: 'medium' }}
   </p>
 
+  <div
+    class="bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4 mt-6 mb-3"
+    role="alert">
+    <div class="flex justify-between">
+      <div>
+        <p class="font-bold text-sm">Place buy order on all pages</p>
+        <p>
+          This action will open "Place Buy Order" window on all opened SCM
+          pages.
+        </p>
+      </div>
+      <button
+        (click)="openPlaceBuyOrderWindowOnAllTabs()"
+        type="button"
+        class="ml-10 shadow transition duration-300 ease-in-out bg-blue-700 hover:bg-blue-900 focus:shadow-outline focus:outline-none text-white font-bold text-sm py-2 px-4 rounded">
+        OPEN
+      </button>
+    </div>
+  </div>
+
   <div class="flex justify-between items-center w-full">
     <button
       type="button"
@@ -246,7 +260,16 @@
         class="mr-1"
         viewBox="0 0 16 16">
         <path
-          d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+          d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47
+            7.59.4.07.55-.17.55-.38
+            0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01
+            1.08.58 1.23.82.72 1.21 1.87.87
+            2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95
+            0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21
+            2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82
+            2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87
+            3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0
+            .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
       </svg>
       <a
         href="https://github.com/6matko/bo-planner"
